Добавление README в задачу первого дня.

--- a/Day_1/README
+++ b/Day_1/README
@@ -1,1 +1,13 @@
 ### Задание
+Задача первого дня (обзовём её так) состояла в написании генератора названий для музыкальной группы.
+В качестве подсказок был дан следующий алгоритм:
+
+1. Программа приветствует пользователя фразой: "Welcome to the band name generator".
+2. Программа предлагает ввести название города, в котором родился пользователь.
+3. Далее программа предлагает ввести кличку домашнего животного.
+4. Программа соединяет название города и кличку, в конечном счёте выдавая это за название группы.
+
+# Пример:
+1. Бристоль
+2. Кролик
+3. Бристоль Кролик (ну или в интерпритации английского - Бристольский кролик), что весьма неплохо.
